--- a/README
+++ b/README
@@ -1,2 +1,8 @@
 SImple node JS Express server running an API Rest to listen POST request and send the information to target emails using the free Sengrid mail service. 
 
+A Dockerfile as part of Docker-compose.yml  is included
+
+
+Post request to the API must be URL-encoded type.
+
+
